k8s/client-cips.yaml
apiVersion: v1
kind: Service
metadata:
        name: client-cips
spec:
        type: ClusterIP
        selector:
                component: web
        ports:
                - port: 3000
                  targetPort: 3000
