k8s/postgres-cips.yaml
apiVersion: v1
kind: Service
metadata:
        name: postgres-cips
spec:
        type: ClusterIP
        selector:
                component: postgres
        ports:
                - port: 5432
                  targetPort: 5432
