k8s/redis-cips.yaml
apiVersion: v1
kind: Service
metadata:
        name: redis-cips
spec:
        type: ClusterIP
        selector:
                component: redis
        ports:
                - port: 6379
                  targetPort: 6379
