k8s/server-cips.yaml
apiVersion: v1
kind: Service
metadata:
        name: server-cips
spec:
        type: ClusterIP
        selector:
                component: server
        ports:
                - port: 5000
                  targetPort: 5000
